Add notes for remote queues support

--- a/_posts/2015-07-31-hangfire-1.5.0-beta.md
+++ b/_posts/2015-07-31-hangfire-1.5.0-beta.md
@@ -82,13 +82,15 @@ RecurringJob.AddOrUpdate(() => Console.WriteLine(Environment.MachineName), Cron.
 
 ### Remote Queues Support for MSMQ
 
-Well, this was very strange that remote MSMQ queues were not supported in Hangfire in previous versions. Starting from now, it is possible when using MSDTC transactions and :
+Well, this was very strange that remote MSMQ queues were not supported in Hangfire in previous versions. Starting from now, it is possible when using MSDTC transactions with the following path format:
 
 {% highlight csharp %}
 GlobalConfiguration.Configuration
     .UseSqlServerStorage(@"Server=.\sqlexpress;Database=Hangfire.Sample;Trusted_Connection=True;")
     .UseMsmqQueues(MsmqTransactionType.Dtc, @"FormatName:DIRECT=OS:server\hangfire-{0}", "default", "critical");
 {% endhighlight %}
+
+**Please note** that configuration is a bit complex in this case, and you should enable MSDTC service, enable network access to MSDTC and enable inbound/outbound rules for MSDTC in your firewall.
 
 ### More Options for Background Job Server
 
