Explained last topics in 1.5.0

--- a/_posts/2015-07-31-hangfire-1.5.0-beta.md
+++ b/_posts/2015-07-31-hangfire-1.5.0-beta.md
@@ -94,11 +94,16 @@ GlobalConfiguration.Configuration
 
 ### More Options for Background Job Server
 
+New properties in `BackgroundJobServerOptions` enable you to customize the core processes in background processing &nbsp; use separate filters or job activators for different server instances, or define your own creation/performance processes. 
+
+Here is an example of how to pass custom filter without touching the global collection:
+
 {% highlight csharp %}
+// JobFilterProviders.Providers allows to use predefined filter collections
 var providers = new JobFilterProviderCollection(JobFilterProviders.Providers);
 var filters = new JobFilterCollection();
 
-filters.Add(new AutomaticRetryAttribute());
+filters.Add(new CustomFilter());
 providers.Add(filters);
 
 var options = new BackgroundJobServerOptions
@@ -113,6 +118,9 @@ app.UseHangfireServer(options);
 
 ### Custom Background Servers
 
+And last, but not least &nbsp; you can de-composite the `BackgroundJobServer` and use the only background processes you need. `BackgroundServer` (without the *job* word) enables you to create a custom processing server from the ground up. 
+
+Want 3 workers listening the `default` queue and 7 listening the `critical` queue? No problem. Don't want to use recurring job scheduler on some instances? You can do this! Just pass the processes you need:
 
 {% highlight csharp %}
 var processes = new List<IServerProcess>();
