Highlight the new code snippets

--- a/_posts/2015-07-31-hangfire-1.5.0-beta.md
+++ b/_posts/2015-07-31-hangfire-1.5.0-beta.md
@@ -20,25 +20,21 @@ Background process is a **continuously-running process** that starts with Hangfi
 
 Background processes were formerly known as *server components* in previous versions of Hangfire. And they already doing a lot of work for you, since workers, recurring job schedulers and other internal classes are based on these interfaces. Since this release it is now possible to define custom processes.
 
-{% highlight c# %}
-public class CleanTempDirectoryProcess : IBackgroundProcess
+<pre><span class="keywd">public</span> <span class="keywd">class</span> <span class="type">CleanTempDirectoryProcess</span> : <span class="type">IBackgroundProcess</span>
 {
-    public void Execute(BackgroundProcessContext context)
+    <span class="keywd">public</span> <span class="keywd">void</span> Execute(<span class="type">BackgroundProcessContext</span> context)
     {
-        // Pseudocode
-        Directory.CleanUp(Directory.GetTempDirectory());
+        <span class="comm">// Pseudocode</span>
+        <span class="type">Directory</span>.CleanUp(<span class="type">Directory</span>.GetTempDirectory());
         
-        // Wait a hour before next attempt
-        context.CancellationToken.WaitHandle.WaitOne(TimeSpan.FromHours(1));
+        <span class="comm">// Wait a hour before next attempt</span>
+        context.CancellationToken.WaitHandle.WaitOne(<span class="type">TimeSpan</span>.FromHours(1));
     }
-}
-{% endhighlight %}
+}</pre>
 
 Background process's `Execute` method is called *in a loop*. When the code throws an exception, it will be logged, and the next attempt will be made after an increasing delay interval. To include a new background job process, just use the new overloads for the `UseHangfireServer` method and `BackgroundJobServer` constructor.
 
-{% highlight csharp %}
-app.UseHangfireServer(new CleanTempDirectoryProcess());
-{% endhighlight %}
+<pre>app.UseHangfireServer(<span class="keywd">new</span> <span class="type">CleanTempDirectoryProcess</span>());</pre>
 
 ### IoC Container Scopes
 
@@ -46,23 +42,19 @@ Sometimes you need to register a shared instance of a service in IoC container w
 
 Since this version, custom scopes for IoC containers are integrated into the core. This is the registration of a shared component in [Hangfire.Autofac](https://github.com/HangfireIO/Hangfire.Autofac):
 
-{% highlight csharp %}
-var builder = new ContainerBuilder();
-builder.RegisterType<Database>()
+<pre><span class="keywd">var</span> builder = <span class="keywd">new</span> <span class="type">ContainerBuilder</span>();
+builder.RegisterType&lt;<span class="type">Database</span>&gt;()
     .InstancePerBackgroundJob()
     .InstancePerHttpRequest();
 
-GlobalConfiguration.Configuration.UseAutofacActivator(builder.Build());
-{% endhighlight %}
+<span class="type">GlobalConfiguration</span>.Configuration.UseAutofacActivator(builder.Build());</pre>
 
 And this is for [Hangfire.Ninject](https://github.com/HangfireIO/Hangfire.Ninject):
 
-{% highlight csharp %}
-var kernel = new StandardKernel();
-kernel.Bind<Database>().ToSelf().InRequestOrBackgroundJobScope();
+<pre><span class="keywd">var</span> kernel = <span class="keywd">new</span> <span class="type">StandardKernel</span>();
+kernel.Bind&lt;<span class="type">Database</span>&gt;().ToSelf().InRequestOrBackgroundJobScope();
 
-GlobalConfiguration.Configuration.UseNinjectActivator(kernel);
-{% endhighlight %}
+<span class="type">GlobalConfiguration</span>.Configuration.UseNinjectActivator(kernel);</pre>
 
 Disposable instances will be disposed just after the processing. However, please refer to the corresponding IoC container integration documentation as there are some caveats.
 
@@ -76,19 +68,18 @@ Even after ungraceful shutdown, the job will be available for other workers **in
 
 Want to run recurring jobs on a per-machine basis? You don't longer need to reinvent how to do this using filters &ndash; there is a new *queue* parameter for the `AddOrUpdate` method that allows you to choose a queue. But please remember that `QueueAttribute` may override it as well as other filters that modify the *Enqueued* state.
 
-{% highlight csharp %}
-RecurringJob.AddOrUpdate(() => Console.WriteLine(Environment.MachineName), Cron.Daily, queue: Environment.MachineName);
-{% endhighlight %}
+<pre><span class="type">RecurringJob</span>.AddOrUpdate(
+    () => <span class="type">Console</span>.WriteLine(<span class="type">Environment</span>.MachineName), 
+    <span class="type">Cron</span>.Daily, 
+    queue: <span class="type">Environment</span>.MachineName);</pre>
 
 ### Remote Queues Support for MSMQ
 
 Well, this was very strange that remote MSMQ queues were not supported in Hangfire in previous versions. Starting from now, it is possible when using MSDTC transactions with the following path format:
 
-{% highlight csharp %}
-GlobalConfiguration.Configuration
-    .UseSqlServerStorage(@"Server=.\sqlexpress;Database=Hangfire.Sample;Trusted_Connection=True;")
-    .UseMsmqQueues(MsmqTransactionType.Dtc, @"FormatName:DIRECT=OS:server\hangfire-{0}", "default", "critical");
-{% endhighlight %}
+<pre><span class="type">GlobalConfiguration</span>.Configuration
+    .UseSqlServerStorage(<span class="string">@"Server=.\sqlexpress;Database=Hangfire.Sample;Trusted_Connection=True;"</span>)
+    .UseMsmqQueues(<span class="type">MsmqTransactionType</span>.Dtc, <span class="string">@"FormatName:DIRECT=OS:server\hangfire-{0}"</span>, <span class="string">"default"</span>, <span class="string">"critical"</span>);</pre>
 
 **Please note** that configuration is a bit complex in this case, and you should enable MSDTC service, enable network access to MSDTC and enable inbound/outbound rules for MSDTC in your firewall.
 
@@ -98,23 +89,21 @@ New properties in `BackgroundJobServerOptions` enable you to customize the core 
 
 Here is an example of how to pass custom filter without touching the global collection:
 
-{% highlight csharp %}
-// JobFilterProviders.Providers allows to use predefined filter collections
-var providers = new JobFilterProviderCollection(JobFilterProviders.Providers);
-var filters = new JobFilterCollection();
+<pre><span class="comm">// JobFilterProviders.Providers allows to use predefined filter collections</span>
+<span class="keywd">var</span> providers = <span class="keywd">new</span> <span class="type">JobFilterProviderCollection</span>(<span class="type">JobFilterProviders</span>.Providers);
+<span class="keywd">var</span> filters = <span class="keywd">new</span> <span class="type">JobFilterCollection</span>();
 
-filters.Add(new CustomFilter());
+filters.Add(<span class="keywd">new</span> <span class="type">CustomFilter</span>());
 providers.Add(filters);
 
-var options = new BackgroundJobServerOptions
+<span class="keywd">var</span> options = <span class="keywd">new</span> <span class="type">BackgroundJobServerOptions</span>
 {
-    CreationProcess = new DefaultJobCreationProcess(providers),
-    PerformanceProcess = new DefaultJobPerformanceProcess(providers),
-    StateMachineFactoryFactory = new StateMachineFactoryFactory(providers)
+    CreationProcess = <span class="keywd">new</span> <span class="type">DefaultJobCreationProcess</span>(providers),
+    PerformanceProcess = <span class="keywd">new</span> <span class="type">DefaultJobPerformanceProcess</span>(providers),
+    StateMachineFactoryFactory = <span class="keywd">new</span> <span class="type">StateMachineFactoryFactory</span>(providers)
 };
 
-app.UseHangfireServer(options);
-{% endhighlight %}
+app.UseHangfireServer(options);</pre>
 
 ### Custom Background Servers
 
@@ -122,20 +111,17 @@ And last, but not least &nbsp; you can de-composite the `BackgroundJobServer` an
 
 Want 3 workers listening the `default` queue and 7 listening the `critical` queue? No problem. Don't want to use recurring job scheduler on some instances? You can do this! Just pass the processes you need:
 
-{% highlight csharp %}
-var processes = new List<IServerProcess>();
+<pre><span class="keywd">var</span> processes = <span class="keywd">new</span> <span class="type">List</span>&lt;<span class="type">IServerProcess</span>&gt;();
 
 processes.AddRange(storage.GetComponents());
-processes.Add(new Worker(new WorkerContext("default", 1)));
-processes.Add(new ServerHeartbeat());
-processes.Add(new ServerWatchdog());
-processes.Add(new SchedulePoller());
-processes.Add(new RecurringJobScheduler());
+processes.Add(<span class="keywd">new</span> <span class="type">Worker</span>(new <span class="type">WorkerContext</span>(<span class="string">"default"</span>, 1)));
+processes.Add(<span class="keywd">new</span> <span class="type">ServerHeartbeat</span>());
+processes.Add(<span class="keywd">new</span> <span class="type">ServerWatchdog</span>());
+processes.Add(<span class="keywd">new</span> <span class="type">SchedulePoller</span>());
+processes.Add(<span class="keywd">new</span> <span class="type">RecurringJobScheduler</span>());
 
-using (var server = new BackgroundServer(processes))
+<span class="keywd">using</span> (<span class="keywd">var</span> server = <span class="keywd">new</span> <span class="type">BackgroundServer</span>(processes))
 {
-    Console.WriteLine("Custom BackgroundServer started. Press ENTER to exit...");
-    Console.ReadLine();
-}
-{% endhighlight %}
-
+    <span class="type">Console</span>.WriteLine(<span class="string">"Custom BackgroundServer started. Press ENTER to exit..."</span>);
+    <span class="type">Console</span>.ReadLine();
+}</pre>
