Fix comment grammar

--- a/_posts/2015-07-31-hangfire-1.5.0-beta.md
+++ b/_posts/2015-07-31-hangfire-1.5.0-beta.md
@@ -27,7 +27,7 @@ Background processes were formerly known as *server components* in previous vers
         <span class="comm">// Pseudocode</span>
         <span class="type">Directory</span>.CleanUp(<span class="type">Directory</span>.GetTempDirectory());
         
-        <span class="comm">// Wait a hour before next attempt</span>
+        <span class="comm">// Wait for an hour before next attempt</span>
         context.CancellationToken.WaitHandle.WaitOne(<span class="type">TimeSpan</span>.FromHours(1));
     }
 }</pre>
