--- a/_posts/2015-07-31-hangfire-1.5.0-beta.md
+++ b/_posts/2015-07-31-hangfire-1.5.0-beta.md
@@ -114,7 +114,7 @@ Want 3 workers listening the `default` queue and 7 listening the `critical` queu
 <pre><span class="keywd">var</span> processes = <span class="keywd">new</span> <span class="type">List</span>&lt;<span class="type">IServerProcess</span>&gt;();
 
 processes.AddRange(storage.GetComponents());
-processes.Add(<span class="keywd">new</span> <span class="type">Worker</span>(new <span class="type">WorkerContext</span>(<span class="string">"default"</span>, 1)));
+processes.Add(<span class="keywd">new</span> <span class="type">Worker</span>(<span class="keywd">new</span> <span class="type">WorkerContext</span>(<span class="string">"default"</span>, 1)));
 processes.Add(<span class="keywd">new</span> <span class="type">ServerHeartbeat</span>());
 processes.Add(<span class="keywd">new</span> <span class="type">ServerWatchdog</span>());
 processes.Add(<span class="keywd">new</span> <span class="type">SchedulePoller</span>());
