--- a/_posts/2015-08-29-hangfire-1.4.6.md
+++ b/_posts/2015-08-29-hangfire-1.4.6.md
@@ -10,4 +10,4 @@ This is a maintenance release that fixes deadlocks in expiration manager, SQL co
 * **Fixed** – SQL deadlocks in `ExpirationManager` background process.
 * **Fixed** – Too many queries in `SchedulePoller` when background job is missing or in another state.
 
-Please see the [release notes](https://github.com/HangfireIO/Hangfire/releases/tag/v1.4.6) on GitHub for linked issues. Thanks to [Tom Kelly](https://github.com/Tom-Kelly) for help with this release!
+Please see the [release notes](https://github.com/HangfireIO/Hangfire/releases/tag/v1.4.6) on GitHub for linked issues. Thanks to [Tom Kelly](https://github.com/Tom-Kelly) for helping with this release!
