Add blog post covering Hangfire 1.5.0 release

--- a/_posts/2015-07-31-hangfire-1.5.0-beta.md
+++ b/_posts/2015-07-31-hangfire-1.5.0-beta.md
@@ -4,6 +4,10 @@ category: release
 author: odinserj
 ---
 
+<div class="alert alert-info">
+    Code snippets were updated for Hangfire 1.5.0 release.
+</div>
+
 This is a pre-release version that adds a lot of great new features for Hangfire requested by you, including background processes, built-in support for custom scopes in IoC containers, queues for recurring jobs and much more!
 
 * <a href="#background-processes">Background Processes</a>
@@ -28,7 +32,7 @@ Background processes were formerly known as *server components* in previous vers
         <span class="type">Directory</span>.CleanUp(<span class="type">Directory</span>.GetTempDirectory());
         
         <span class="comm">// Wait for an hour before next attempt</span>
-        context.CancellationToken.WaitHandle.WaitOne(<span class="type">TimeSpan</span>.FromHours(1));
+        context.Wait(<span class="type">TimeSpan</span>.FromHours(1));
     }
 }</pre>
 
@@ -98,29 +102,26 @@ providers.Add(filters);
 
 <span class="keywd">var</span> options = <span class="keywd">new</span> <span class="type">BackgroundJobServerOptions</span>
 {
-    CreationProcess = <span class="keywd">new</span> <span class="type">DefaultJobCreationProcess</span>(providers),
-    PerformanceProcess = <span class="keywd">new</span> <span class="type">DefaultJobPerformanceProcess</span>(providers),
-    StateMachineFactoryFactory = <span class="keywd">new</span> <span class="type">StateMachineFactoryFactory</span>(providers)
+    FilterProvider = providers,
+    Activator = <span class="keywd">new</span> <span class="type">NinjectJobActivator</span>(kernel)
 };
 
 app.UseHangfireServer(options);</pre>
 
 ### Custom Background Servers
 
-And last, but not least &nbsp; you can de-composite the `BackgroundJobServer` and use the only background processes you need. `BackgroundServer` (without the *job* word) enables you to create a custom processing server from the ground up. 
+And last, but not least &nbsp; you can de-composite the `BackgroundJobServer` and use the only background processes you need. `BackgroundProcessingServer` (without the *job* word) enables you to create a custom processing server from the ground up. 
 
 Want 3 workers listening the `default` queue and 7 listening the `critical` queue? No problem. Don't want to use recurring job scheduler on some instances? You can do this! Just pass the processes you need:
 
-<pre><span class="keywd">var</span> processes = <span class="keywd">new</span> <span class="type">List</span>&lt;<span class="type">IServerProcess</span>&gt;();
+<pre><span class="keywd">var</span> processes = <span class="keywd">new</span> <span class="type">List</span>&lt;<span class="type">IBackgroundProcess</span>&gt;
+{
+    <span class="keywd">new</span> <span class="type">Worker</span>(<span class="string">"default"</span>),
+    <span class="keywd">new</span> <span class="type">DelayedJobScheduler</span>(),
+    <span class="keywd">new</span> <span class="type">RecurringJobScheduler</span>()
+};
 
-processes.AddRange(storage.GetComponents());
-processes.Add(<span class="keywd">new</span> <span class="type">Worker</span>(<span class="keywd">new</span> <span class="type">WorkerContext</span>(<span class="string">"default"</span>, 1)));
-processes.Add(<span class="keywd">new</span> <span class="type">ServerHeartbeat</span>());
-processes.Add(<span class="keywd">new</span> <span class="type">ServerWatchdog</span>());
-processes.Add(<span class="keywd">new</span> <span class="type">SchedulePoller</span>());
-processes.Add(<span class="keywd">new</span> <span class="type">RecurringJobScheduler</span>());
-
-<span class="keywd">using</span> (<span class="keywd">var</span> server = <span class="keywd">new</span> <span class="type">BackgroundServer</span>(processes))
+<span class="keywd">using</span> (<span class="keywd">var</span> server = <span class="keywd">new</span> <span class="type">BackgroundProcessingServer</span>(processes))
 {
     <span class="type">Console</span>.WriteLine(<span class="string">"Custom BackgroundServer started. Press ENTER to exit..."</span>);
     <span class="type">Console</span>.ReadLine();
