--- a/_posts/2015-08-31-hangfire-1.5.0-beta3.md
+++ b/_posts/2015-08-31-hangfire-1.5.0-beta3.md
@@ -4,7 +4,7 @@ category: release
 author: odinserj
 ---
 
-Version 1.5.0 will open many types that were internal in previous versions of Hangfire, like `Worker` or `StateChangingProcess`, to enable you to have completely custom background processing. This release simplifies the usage of these types, of course only to decrease the amount of questions on forums :smiley:.
+Version 1.5.0 will open many types that were internal in previous versions of Hangfire, like `Worker` or `IBackgroundFactory`, to enable you to have completely custom background processing. This release simplifies the usage of these types, of course only to decrease the amount of questions on forums :smiley:.
 
 1.5.0-beta3 comes with refactored `Hangfire.States` namespace – I was ashamed to make the `IStateMachineFactoryFactory` interface public (I believe FactoryFactory is an absolute evil). Worker identifiers are now auto-generated and based on GUIDs to prevent us from id collisions. Please read the GitHub [release notes](https://github.com/HangfireIO/Hangfire/releases/tag/v1.5.0-beta3) for some more details.
 
