--- a/_posts/2015-10-14-hangfire-1.5.1.md
+++ b/_posts/2015-10-14-hangfire-1.5.1.md
@@ -6,6 +6,6 @@ author: odinserj
 
 This is a correcting release that fixes some non-critical bugs.
 
-* **Fixed** – `JobLoadException` during deserialization when a method defined in an inherited interface (by @triwire).
+* **Fixed** – `JobLoadException` during deserialization when a method defined in an inherited interface.
 * **Fixed** – Unable to see enqueued jobs in Dashboard UI when using SQL Server queues.
 * **Fixed** – Show alert box instead of an exception on Awaiting Jobs page.
