--- a/_posts/2015-04-11-hangfire-1.4.0-rc2.md
+++ b/_posts/2015-04-11-hangfire-1.4.0-rc2.md
@@ -6,7 +6,7 @@ author: odinserj
 
 This is a pre-release version of Hangfire 1.4.0 that is considered to be stable (and it is more stable than 1.3.x). Final version will be released after documentation changes (some awesome features added, please see [1.4.0-beta1](http://hangfire.io/blog/2015/04/06/hangfire-1.4.0-beta1.html)).
 
-[![New Dashboard]({{ site.url }}/img/new-dashboard.png)](/img/new-dashboard.png)
+[![New Dashboard]({{ site.cdn }}/img/new-dashboard.png)]({{ site.cdn }}/img/new-dashboard.png)
 
 #### Hangfire.Core:
 * **Changed** – Retry a job when there was an exception during state transition instead of moving it to the Failed state.
