Replace http with https where possible

--- a/_posts/2014-05-02-hangfire-0.8-released.md
+++ b/_posts/2014-05-02-hangfire-0.8-released.md
@@ -93,4 +93,4 @@ Full unit testability was one of the goals I wanted to achieve, and the fact tha
 
 Now I've started to think about production readiness, but I need a lot of feedback to give any stability guarantees. 
 
-Recently I've launched a new forum for Hangfire to replace unnoying (for me) Google Groups – http://discuss.hangfire.io. It is modern, clean and easy to use, based on [Discourse](http://www.discourse.org). So, have ideas or problems? Let's discuss!
+Recently I've launched a new forum for Hangfire to replace unnoying (for me) Google Groups – https://discuss.hangfire.io. It is modern, clean and easy to use, based on [Discourse](https://www.discourse.org). So, have ideas or problems? Let's discuss!
