--- a/_posts/2014-12-10-hangfire-1.3.0-released.md
+++ b/_posts/2014-12-10-hangfire-1.3.0-released.md
@@ -9,7 +9,7 @@ redirect_from:
 
 ### Logging that just works
 
-Logging was a very difficult thing to set-up in previous versions of Hangfire. Even if we omit [tricky versioning](http://discuss.hangfire.io/t/move-away-from-common-logging-library/378/7) issues, you had to install a separate logging adapter for your current logging library, with guessing the right one first (i.e. `Common.Logging.NLog` or `Common.Logging.NLog20`).
+Logging was a very difficult thing to set-up in previous versions of Hangfire. Even if we omit [tricky versioning](https://discuss.hangfire.io/t/move-away-from-common-logging-library/378/7) issues, you had to install a separate logging adapter for your current logging library, with guessing the right one first (i.e. `Common.Logging.NLog` or `Common.Logging.NLog20`).
 
 Now, the logging just works. If your project already uses [Elmah](https://code.google.com/p/elmah/), [NLog](http://nlog-project.org/), [Log4Net](https://logging.apache.org/log4net/), [EntLib Logging](http://msdn.microsoft.com/en-us/library/ff647183.aspx), [Serilog](http://serilog.net/) or [Loupe](http://www.gibraltarsoftware.com/Loupe) you are *not required to do anything*. Thanks to awesome [LibLog](https://github.com/damianh/LibLog) library by Damian Hickey ([@randompunter](https://twitter.com/randompunter) on Twitter), installed logging library will be used automatically through the reflection.
 
