--- a/_posts/2015-10-01-hangfire-1.5.0.md
+++ b/_posts/2015-10-01-hangfire-1.5.0.md
@@ -69,7 +69,7 @@ If you used 1.5.0 betas, you may receive some compile time errors. Please see [1
 
 Many contributors helped to make this release by implementing new features, reviewing changes, fixing bugs and cleaning up the code. [Andrew Young](https://github.com/yngndrw), [Atif Aziz](https://github.com/atifaziz), [Eric](https://github.com/erictrade), [@maleet](https://github.com/maleet), [Mark Avenius](https://github.com/mavenius), [Pascal Berger](https://github.com/pascalberger), [Rob van der Linden Vooren](https://github.com/robvdlv), [Ryan Wright](https://github.com/ryanmwright), [Tom Kelly](https://github.com/Tom-Kelly), thank you so much for your help!
 
-Special thanks to [Andrew Young](http://discuss.hangfire.io/users/yngndrw/activity) and [Nikola Irinchev](http://discuss.hangfire.io/users/nirinchev/activity) for their hard work on the discussion forum. They helped a huge number of other users to solve their problems!
+Special thanks to [Andrew Young](https://discuss.hangfire.io/users/yngndrw/activity) and [Nikola Irinchev](https://discuss.hangfire.io/users/nirinchev/activity) for their hard work on the discussion forum. They helped a huge number of other users to solve their problems!
 
 ### Roadmap
 
