Added link to the GitHub release page

--- a/_posts/2016-04-14-hangfire-1.5.5.md
+++ b/_posts/2016-04-14-hangfire-1.5.5.md
@@ -5,3 +5,5 @@ category: release
 ---
 
 This is a correcting release that fixes a problem with recurring jobs. It is related to a possible misfire on a first run, if a background processing server was inactive during the scheduled time.
+
+Please see the [corresponding release](https://github.com/HangfireIO/Hangfire/releases/tag/v1.5.5) on GitHub for linked issues/PRs.
