--- a/_posts/2016-05-31-hangfire-1.6.0-beta3.md
+++ b/_posts/2016-05-31-hangfire-1.6.0-beta3.md
@@ -6,7 +6,7 @@ category: release
 
 Third beta of the upcoming 1.6 release. Contains a fix for a bug introduced in the previous beta, related to inability to add custom filters, as well as fixes from the recent [1.5.7](http://hangfire.io/blog/2016/05/30/hangfire-1.5.7.html) version.
 
-* **Added** – Spaninsh localization for the Dashboard UI (@elph).
+* **Added** – Spanish localization for the Dashboard UI (@elph).
 * **Added** – Enable backtracking from background job to recurrent job (by @teodimache).
 * **Changed** – Make the realtime/history graph to use localized dates on hover (by @elph).
 * **Changed** – Make graph tooltip also localized using data-attributes (by @elph).
