Change heading levels in latest release notes

--- a/_posts/2016-07-16-hangfire-1.6.0.md
+++ b/_posts/2016-07-16-hangfire-1.6.0.md
@@ -6,13 +6,13 @@ author: odinserj
 
 Hangfire 1.6 just released with experimental .NET Core platform support, deep integration with ASP.NET Core and `async`/`await` programming model support. Start processing background jobs with ease even on Linux and OS X today! 
 
-## What's New
+### What's New
 
-### Async Methods for Background Jobs
+#### Async Methods for Background Jobs
 
 Async programming became very popular in .NET a long time ago. With the `await` keyword it won an even greater success – some libraries even don't provide synchronous API (like [Microsoft.Net.Http](https://www.nuget.org/packages/Microsoft.Net.Http/)), so we can't ignore this movement. In the past you had to await your methods manually, but those days are over.
 
-#### Support for the `await` Keyword
+##### Support for the `await` Keyword
 
 The `await` keyword is fully supported in background methods now. So you can replace all the methods that were required to run `async` methods synchronously (`Task.Wait`, `AsyncContext`, etc.). Big thanks to [@tuespetre](https://github.com/tuespetre) for the initial implementation of this feature!
 
@@ -37,7 +37,7 @@ The enqueueing logic is the same for sync and async methods. In early betas ther
 BackgroundJob.Enqueue(() => HighlightAsync(snippet.Id));
 ``` 
 
-#### Cancellation Tokens
+##### Cancellation Tokens
 
 If your async methods support `CancellationToken` parameters, don't forget to add them to allow background processing server to stop gracefully during the application shutdown. With this release Hangfire is able to pass `CancellationToken` instance to your methods.
 
@@ -54,11 +54,11 @@ When creating a background job, pass whatever `CancellationToken` you want, but 
 BackgroundJob.Enqueue(() => HighlightAsync(snippetId, CancellationToken.None));
 ```
 
-#### That's not a real asynchrony
+##### That's not a real asynchrony
 
 Please consider this feature as a syntactic sugar. Background processing hasn't became asynchronous. Internally it was implemented using the `Task.Wait` method, so workers don't perform any processing, while waiting for a task completion. Real asynchrony may come in Hangfire 2.0 only, and it requires a lot of breaking changes to the existing types.
 
-### Experimental .NET Core Support
+#### Experimental .NET Core Support
 
 Experimental support for .NET Core platform was added in this release by targeting [.NET Standard 1.3](https://docs.microsoft.com/en-us/dotnet/articles/standard/library) platform. We aren't able to run automatic tests for Hangfire yet, because some required packages weren't ported to .NET Core (like [Moq](https://www.nuget.org/packages/Moq)), so some edge cases may not work. All the tests should be running automatically on Windows, Linux and OS X in a near future to remove the *experimental* warning.
 
@@ -66,7 +66,7 @@ However, it looks like Client API, Server API and Dashboard UI are working fine,
 
 Please note that some packages like [Hangfire.Dashboard.Authorization](https://www.nuget.org/packages/Hangfire.Dashboard.Authorization/) are not available for .NET Core platform yet.
 
-### ASP.NET Core Integration
+#### ASP.NET Core Integration
 
 Dashboard UI was abstracted from OWIN to support new ASP.NET Core's HTTP abstractions natively and move away from the OWIN dependency. The new `Hangfire.AspNetCore` package enables deep integration with ASP.NET Core applications for **both .NET 4.5.1 and .NET Core platforms**, including:
 
@@ -120,7 +120,7 @@ namespace MyWebApplication
 
 ```
 
-### … And More!
+#### … And More!
 
 * Zero-latency processing when client and server reside in the same process when using SQL Server (by @bgurmendi).
 * Access to background job context from the `JobActivator.BeginScope` method.
@@ -130,7 +130,7 @@ namespace MyWebApplication
 
 For the whole list please see the [corresponding GitHub release](https://github.com/HangfireIO/Hangfire/releases/tag/v1.6.0). 
 
-## Upgrading
+### Upgrading
 
 I've tried hard to not to introduce breaking changes for current users. As a result, only some Dashboard UI's classes and interfaces were deprecated, but *still available* till Hangfire 2.0. **Other types were not changed in Hangfire that target the .NET 4.5 platform**.
 
@@ -145,7 +145,7 @@ app.UseHangfireDashboard("/hangfire", new DashboardOptions
 
 `IRequestDispatcher` interface was also replaced with the `IDashboardDispatcher` one, and this change caused some methods of `RouteCollection` class to be deprecated. Please see the `obsolete` warning messages, they will tell you what type or method to use.
 
-## Thank You!
+### Thank You!
 
 And last, but definitely not least, big thanks to the following folks for their help in making Hangfire even better!
 
