--- a/_posts/2016-07-16-hangfire-1.6.0.md
+++ b/_posts/2016-07-16-hangfire-1.6.0.md
@@ -33,7 +33,7 @@ If you want to return a result, use the `Task<T>` as a returning type instead. P
 
 The enqueueing logic is the same for sync and async methods. In early betas there was a warning [CS4014](https://msdn.microsoft.com/en-us/library/hh873131.aspx), but now you can remove all the `#pragma warning disable` statements. It was implemented by using `Expression<Func<Task>>` parameter overloads.
 
-```cshar
+```csharp
 BackgroundJob.Enqueue(() => HighlightAsync(snippet.Id));
 ``` 
 
