--- a/_posts/2016-07-27-hangfire-1.6.1.md
+++ b/_posts/2016-07-27-hangfire-1.6.1.md
@@ -6,7 +6,7 @@ category: release
 
 This is a correcting release that fixes a couple of problems, including exception when using Serilog (appeared in 1.6.0), wrong CRON format strings for intervals, and ones that relate to the .NET Core platform. They were revealed by adding support to continuously run unit tests on Windows, Linux and OS X for the .NET Core using [AppVeyor](https://www.appveyor.com/) and [Travis CI](https://travis-ci.org/).
 
-Hangfire.Core
+**Hangfire.Core**
 
 * **Added** – Automatic unit tests execution for .NET Core on Windows, Linux and OS X using AppVeyor and Travis&nbsp;CI.
 * **Fixed** – `DateTime` deserialization issues on .NET Core platform.
@@ -17,10 +17,10 @@ Hangfire.Core
 * **Fixed** – Don't skip symbols when publishing NuGet packages.
 * **Fixed** – Use GUID identifier when can't determine the host name.
 
-Hangfire.AspNetCore
+**Hangfire.AspNetCore**
 
 * **Fixed** – Add missing `GetHttpContext` extension method for the .NET Core platform (#613).
 
-Thanks to [Jamie Mahoney (@mahoneyj2)](https://github.com/mahoneyj2) and Steven Tsang (@stevetsang) for their help in eliminating bugs!
+Thanks to [Jamie Mahoney (@mahoneyj2)](https://github.com/mahoneyj2) and [Steven Tsang (@stevetsang)](https://github.com/stevetsang) for their help in eliminating bugs!
 
 Please see the [corresponding release](https://github.com/HangfireIO/Hangfire/releases/tag/v1.6.1) on GitHub for linked issues/PRs.
