Add sample configuration string for the latest post

--- a/_posts/2016-08-10-hangfire.pro.redis-2.0.md
+++ b/_posts/2016-08-10-hangfire.pro.redis-2.0.md
@@ -23,6 +23,9 @@ Previous version is deprecated now, new releases will contain only bug fixes.
 
 New version uses the same storage schema, so breaking changes relate only to the library API. To upgrade your previous `Hangfire.Pro.Redis` installation, please read about the [new configuration string format](http://docs.hangfire.io/en/latest/configuration/using-redis.html#hangfire-pro-redis-2-x) in the documentation, and update it in your project accordingly.
 
+<pre><code><span class="type">GlobalConfiguration</span>.Configuration
+    .UseRedisStorage(<span class="string">"contoso5.redis.cache.windows.net,abortConnect=false,ssl=true,password=..."</span>);</code></pre>
+
 Please note that since this release, Redis &ge; 2.6 is required.
 
 ### .NET Core
