Fix sentence, add new heading for the latest post

--- a/_posts/2016-08-10-hangfire.pro.redis-2.0.md
+++ b/_posts/2016-08-10-hangfire.pro.redis-2.0.md
@@ -4,7 +4,9 @@ category: release
 author: odinserj
 ---
 
-Brand new version of [Hangfire.Pro.Redis](http://nuget.hangfire.io/feeds/hangfire-pro/Hangfire.Pro.Redis/2.0.0) is finally available. It is now based on feature-rich [StackExchange.Redis](https://github.com/StackExchange/StackExchange.Redis) library, allowing us to bring Hangfire to more environments that use Redis storage in the near future. This version comes with some new features, including SSL support and highly reduced connection.
+Brand new version of [Hangfire.Pro.Redis](http://nuget.hangfire.io/feeds/hangfire-pro/Hangfire.Pro.Redis/2.0.0) is finally available. It is now based on feature-rich [StackExchange.Redis](https://github.com/StackExchange/StackExchange.Redis) library, allowing us to bring Hangfire to more environments that use Redis storage in the near future. This version comes with some new features, including SSL support and highly reduced connection usage.
+
+### What's New
 
 <dl>
     <dt>Support for SSL connections</dt>
