--- a/_posts/2014-05-02-hangfire-0.8-released.md
+++ b/_posts/2014-05-02-hangfire-0.8-released.md
@@ -56,7 +56,7 @@ Elmah library author and contributors conducted a deep investigation on a topic 
 2. The location element's path attribute carries the same value as the path attribute of the handler registrations. Unfortunately, it has to be repeated so if you change one, the others must be updated to match.
 3. The authorization element is where the authorization rules go and where you will want to selectively grant access.
 
-So, starting from this version, Hangfire Monitor HTTP handler is being registered under the `location` tag:
+So, starting from this version, Hangfire Monitor HTTP handler is registered under the `location` tag:
 
 {% highlight xml %}
 <location path="hangfire.axd" inheritInChildApplications="false">
