--- a/_posts/2014-05-17-hangfire-0.8.1-released.md
+++ b/_posts/2014-05-17-hangfire-0.8.1-released.md
@@ -25,7 +25,7 @@ As always, the new version of [Hangfire](http://hangfire.io) can be installed vi
 
 ### Deleting jobs
 
-There is a new state – `DeletedState`, and some methods to perform the deletion – `BackgroundJob.Delete` and `IBackgroundJobClient.Delete`. When you are using these methods, a job is not being actually deleted, there is only state transition. Jobs in the deleted state expire after some delay (as succeeded jobs).
+There is a new state – `DeletedState`, and some methods to perform the deletion – `BackgroundJob.Delete` and `IBackgroundJobClient.Delete`. When you are using these methods, a job is not actually deleted, there is only state transition. Jobs in the deleted state expire after some delay (as succeeded jobs).
 
 The operation does not provides guarantee that the job will not be performed. If you deleting a job that is performing right now, it will be performed anyway, despite of calls to delete methods.
 
