--- a/_posts/2014-05-21-hangfire-0.8.2-released.md
+++ b/_posts/2014-05-21-hangfire-0.8.2-released.md
@@ -19,7 +19,7 @@ You are also able to select all jobs in one click. Many thanks to GitHub Issues 
 
 ### Additional metrics
 
-When you write the code, it is important to have an instrument to measure the performance time. ASP.NET has different diagnostic tools for this task – [Glimpse](http://getglimpse.com), [MiniProfiler](http://miniprofiler.com) and other useful ones. But they are aimed to provide information about requests only, and almost useless for background jobs – they are being executed outside of a request.
+When you write the code, it is important to have an instrument to measure the performance time. ASP.NET has different diagnostic tools for this task – [Glimpse](http://getglimpse.com), [MiniProfiler](http://miniprofiler.com) and other useful ones. But they are aimed to provide information about requests only, and almost useless for background jobs – they are executed outside of a request.
 
 I've implemented simple diagnostic feature (and not the replacement to full-stack performance profilers, such as [dotTrace](http://www.jetbrains.com/profiler/)) for Hangfire Monitor, and now you are able to see the following timings in Hangfire Monitor:
 
@@ -34,7 +34,7 @@ These metrics are added to the `SucceededState`, so they are also available to s
 
 ### DisableConcurrentExecution filter
 
-This filter places a distributed lock in the beginning of a method performance and releases it after it was completed using the `IServerFilter` interface. The type and method name are being used as a locking resource. Each storage uses its own distributed lock implementation:
+This filter places a distributed lock in the beginning of a method performance and releases it after it was completed using the `IServerFilter` interface. The type and method name are used as a locking resource. Each storage uses its own distributed lock implementation:
 
 * SQL Server uses `sp_getapplock` stored procedure;
 * Redis implementation uses the technique described in its [documentation](http://redis.io/commands/setnx).
