--- a/_posts/2014-06-07-hangfire-0.9-released.md
+++ b/_posts/2014-06-07-hangfire-0.9-released.md
@@ -15,7 +15,7 @@ This version brings incredibly easy method of scheduling and running recurring j
 RecurringJob.AddOrUpdate(() => Console.Write("Easy!"), Cron.Daily);
 {% endhighlight %}
 
-The `Cron` class provides different easy to use methods and overloads to set up recurring jobs on a minutely, hourly, weekly, monthly and yearly basis. It is also possible to use more complex [CRON expressions](http://en.wikipedia.org/wiki/Cron#CRON_expression), since the [`NCrontab`](https://code.google.com/p/ncrontab/) library is being used to perform scheduling logic.
+The `Cron` class provides different easy to use methods and overloads to set up recurring jobs on a minutely, hourly, weekly, monthly and yearly basis. It is also possible to use more complex [CRON expressions](http://en.wikipedia.org/wiki/Cron#CRON_expression), since the [`NCrontab`](https://code.google.com/p/ncrontab/) library is used to perform scheduling logic.
 
 {% highlight csharp %}
 RecurringJob.AddOrUpdate(
