--- a/_posts/2015-04-13-hangfire-1.4.0.md
+++ b/_posts/2015-04-13-hangfire-1.4.0.md
@@ -40,7 +40,7 @@ Time zone support has been added for recurring jobs. It is based on BCL's `TimeZ
     <span class="string">"15 08 * * *"</span>, 
     <span class="type">TimeZoneInfo</span>.FindSystemTimeZoneById(<span class="string">"Hawaiian Standard Time"</span>));</pre>
 
-By default, UTC is being used to schedule recurring jobs, but this will be changed in 2.0 release to correspond other default values of other schedulers. Please note that time zone identifiers don't match between Windows and non-Windows machines.
+By default, UTC is used to schedule recurring jobs, but this will be changed in 2.0 release to correspond other default values of other schedulers. Please note that time zone identifiers don't match between Windows and non-Windows machines.
 
 ### Continuations
 
