--- a/_posts/2016-08-05-hangfire-1.6.2.md
+++ b/_posts/2016-08-05-hangfire-1.6.2.md
@@ -4,7 +4,7 @@ author: odinserj
 category: release
 ---
 
-This correcting release contains important fixes for SQL Server and MSMQ integrations, as well as some cosmetic changes to the Dashboard UI. Major blocking problem was resolved, when using Hangfire with SQL Server, that may cause a lot of blocking records in the `State` table, preventing background processing from working flawlessly, when expired records are being removed from a database – Database Engine didn't use the right index during the query performance.
+This correcting release contains important fixes for SQL Server and MSMQ integrations, as well as some cosmetic changes to the Dashboard UI. Major blocking problem was resolved, when using Hangfire with SQL Server, that may cause a lot of blocking records in the `State` table, preventing background processing from working flawlessly, when expired records are removed from a database – Database Engine didn't use the right index during the query performance.
 
 #### Hangfire.Core
 
