--- a/_posts/2015-01-29-hangfire-1.3.3-released.md
+++ b/_posts/2015-01-29-hangfire-1.3.3-released.md
@@ -7,11 +7,11 @@ redirect_from:
 - /2015/01/29/hangfire-1.3.3-released.html
 ---
 
-This is a correcting release. Fixed a bug related to MSMQ or RabbitMQ extensions, when enqueued job is not being processed and "stucked" in the *Enqueued* state indefinitely until we retry it manually.
+This is a correcting release. Fixed a bug related to MSMQ or RabbitMQ extensions, when enqueued job is not processed and "stucked" in the *Enqueued* state indefinitely until we retry it manually.
 
 ### Release Notes
 
-* **Fixed** – Enqueued job is not being processed with MSMQ or RabbitMQ.
+* **Fixed** – Enqueued job is not processed with MSMQ or RabbitMQ.
 
 Please see the corresponding [GitHub Release](https://github.com/HangfireIO/Hangfire/releases/tag/v1.3.3) for the details.
 
