--- a/_posts/2016-08-19-hangfire-1.6.3.md
+++ b/_posts/2016-08-19-hangfire-1.6.3.md
@@ -6,7 +6,7 @@ category: release
 
 ### Release Notes
 
-This is a maintenance release that contains fixes for several bugs. It is highly recommended to upgrade to this version, if you are using `Hangfire.SqlServer`. Thanks for all folks who reported these issues!
+This is a maintenance release that contains fixes for several bugs. It is highly recommended to upgrade to this version, if you are using `Hangfire.SqlServer`. Thanks to all folks who helped with reporting and investigating these issues!
 
 **Hangfire.Core**
 
